Typos fixed and intro to lab split out in lab 00.

--- a/lab01.html
+++ b/lab01.html
@@ -44,32 +44,19 @@
     <div class="slides">
         <section>
             <div style="width: 1056px; height: 120px; color: white">
-                <h3>DESTINASIA SERIVCES TEAM</h3>
+                <h3>HOW EACH LAB WORKS</h3>
             </div>
-            <div style="width: 1056px; height: 400px;">
+            <div style="width: 1056px; height: 400px;" align="left">
                 <h5>
-                    In this workshop you become the lead developer who sets up a development environment for the Cloud
-                    hosted containerized application services for end-to-end testing. This entails installing OpenShift
-                    Container Platform (OCP), JBoss Enterprise Application Platform (EAP), JBoss Business Rules Management
-                    System (BRMS), several containerized web services and test the end-to-end solution using a REST
-                    client.
+                    A lab starts with a title page, a lab goal explaining what you're achieving and an overview
+                    architectural diagram highlighting in <i style="color: red;">RED</i> the component being worked
+                    on. The rest of the lab focuses on guiding through the steps to achieve the presented goal.
                     <br><br>
-                    You will need to ensure that you have been given an USB (by the instructor) with the pre-requisites,
-                    or ensure you have internet access for downloading them.
+                    Each lab will finish up with the state you should be seeing, a page of contact information for
+                    eventual questions and a link to the next lab.
+                    <br><br>
+                    Now it's time to get to work...
                 </h5>
-            </div>
-            <div style="width: 1056px; height: 100px;">
-                <h5 style="color: red"><b>Pre-requisites:</b> <i>Laptop with 16GB RAM, Docker 1.13, OCP 3.4, JBoss EAP 7.0, JBoss BRMS 6.4</i></h5>
-            </div>
-        </section>
-
-        <section>
-            <div style="width: 1056px; height: 130px;">
-                <h2>ARCHITECTURE</h2>
-                <h4>Destinasia service deployment overview</h4>
-            </div>
-            <div style="width: 1056px; height: 600px;">
-                <img src="images/destinasia-workshop/image12.png">
             </div>
         </section>
 
