--- a/lab04.html
+++ b/lab04.html
@@ -115,7 +115,7 @@
             </div>
             <div style="width: 1056px; height: 150px;">
                 <ul>
-                    <li>The rule service playbook looks up the JBOss BRMS containers internal IP in preparation for
+                    <li>The rule service playbook looks up the JBoss BRMS containers internal IP in preparation for
                         extracting the discount rules project:</li>
                     <br>
                 </ul>
