Updated to docker 17.03.

--- a/introduction.html
+++ b/introduction.html
@@ -116,8 +116,8 @@
                 <ul>
                     <li>Base needs:</li>
                     <ul>
-                        <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red" target="_blank"><b>Docker</b></a></li>
-                        <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red" target="_blank"><b>OpenShift CLI</b></a></li>
+                        <li><a href="https://store.docker.com/search?offering=community&type=edition" style="color: red" target="_blank"><b>Docker v17.03</b></a></li>
+                        <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red" target="_blank"><b>OpenShift CLI v3.5.5.5</b></a></li>
                         <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red" target="_blank"><b>VirtualBox (Mac / Windows)</b></a></li>
                         <li>Ansible playbook tooling:</li>
                         <ul>
