--- a/lab01.html
+++ b/lab01.html
@@ -135,14 +135,14 @@
                 <br>
                 <ul>
                     <li><p style="font-size: 24px"><code>Docker is required but not installed yet... download here:
-                        <a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red"
-                           target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></p></li>
+                        <a href="https://store.docker.com/search?offering=community&type=edition" style="color: red"
+                           target="_blank">https://store.docker.com/search?offering=community&type=edition</a></code></p></li>
                 </ul>
                 <br><br>
                 <b>Fix:</b>
                 <br>
                 <ul>
-                    <li>Download, install and start Docker version 1.13</li>
+                    <li>Download, install and start Docker version 17.03</li>
                 </ul>
                 </ul>
             </div>
@@ -166,7 +166,7 @@
                 <b>Fix:</b>
                 <br>
                 <ul>
-                    <li>Download, install and start Docker version 1.13</li>
+                    <li>Download, install and start Docker version 17.03</li>
                 </ul>
                 </ul>
             </div>
@@ -180,15 +180,14 @@
                 <b>Version problems:</b>
                 <br>
                 <ul>
-                    <li><p style="font-size: 24px"><code>Docker engine version X.X found... need 1.13, please update:
-                        <a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: red" target="_blank">
-                            https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a></code></p></li>
+                    <li><p style="font-size: 24px"><code>Docker engine version X.X found... need 17.03, please update:
+                        <a href="https://store.docker.com/search?offering=community&type=edition" style="color: red" target="_blank">https://store.docker.com/search?offering=community&type=edition</a></code></p></li>
                 </ul>
                 <br><br>
                 <b>Fix:</b>
                 <br>
                 <ul>
-                    <li>Download, install and start Docker version 1.13</li>
+                    <li>Download, install and start Docker version 17.03</li>
                 </ul>
                 </ul>
             </div>
