--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h2 style="color: white">Destinasia Travel Agency</h2>
                     </div>
                     <div style="width: 100%; height: 220px; color: white">
-                            This workshop is hands-on installing the OpenShift Container Platform, deploying six
+                            Get hands-on in this workshop installing the OpenShift Container Platform, deploying six
                             containerized services for Destinasia backend systems and testing the results.
                     </div>
                     <div style="width: 100%; height: 100px;">
