--- a/introduction.html
+++ b/introduction.html
@@ -153,7 +153,7 @@
 
         <section data-background="images/introduction/image03.png" data-background-size="cover" data-background-position="bottom">
             <div style="width: 100%; height: 600px; color: red">
-                Log in to your new Cloud:<br><br>
+                Log in to your new Cloud, for example this might be your assigned IP as reported during installation:<br><br>
                 <ul>
                     <li><a href="http://192.168.99.100:8443" style="color: red" target="_blank"><b>http://192.168.99.100:8443</b></a></li>
                     <li style="color: red">User: <b><i>openshift-dev</i></b></li>
@@ -174,17 +174,17 @@
                     <ul>
                         <li>Add to <i>installs</i> directory</li>
                     </ul>
-                    <li>Run init.sh or init.bat, point it at OCP installation:</li>
+                    <li>Run init.sh or init.bat, point it at OCP installation IP address:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px"><code>$ init.sh 192.168.99.100</code></p></li>
+                        <li><p style="font-size: 24px"><code style="color: darkred">$ init.sh 192.168.99.100</code></p></li>
                     </ul>
                     <br>
                     <li>Enjoy the break before logging in:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 22px"><code><a href="http://destinasia-rules-demo.192.168.99.100.xip.io/business-central"
-                               style="color: red" target="_blank"><b>http://destinasia-rules-demo.192.168.99.100.xip.io/business-central</b></a> (password: jbossbrms1!)</code></p>
+                        <li><p style="font-size: 22px"><code style="color: darkred"><a href="http://destinasia-rules-demo.192.168.99.100.xip.io/business-central"
+                               style="color: darkred" target="_blank"><b>http://destinasia-rules-demo.192.168.99.100.xip.io/business-central</b></a> (password: jbossbrms1!)</code></p>
                     </ul>
                 </ul>
             </div>
@@ -217,22 +217,92 @@
         </section>
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="100%" data-background-position="center">
-            <div style="width: 980px; height: 120px; color: white">
-                <h2 style="color: white;">ARCHITECTURE</h2>
-                <h4 style="color: white">DESTINASIA SERVICES</h4>
+            <div style="width: 980px; height: 200px; color: white">
+                <h2 style="color: white;">ANSIBLE PLAYBOOK</h2>
+                <h4 style="color: white">IN SUPPORT DIRECTORY - RULE SERVICE</h4>
             </div>
-            <div style="width: 980px; height: 600px;">
-                <img width="100%" height="100%" src="images/introduction/image02.png">
+            <div style="width: 980px; height: 600px;" align="left">
+                <code style="color: darkred">
+                    $ cd support/playbooks/deploy-ocp-services
+                    <br><br>
+                    # Run Rule service (xPaaS Decision Server) playbook
+                    <br>
+                    #
+                    <br>
+                    $ ./ansible-playbook-ruleservice.sh
+                </code>
             </div>
         </section>
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="100%" data-background-position="center">
-            <div style="width: 980px; height: 120px; color: white">
-                <h2 style="color: white;">PLAYBOOKS</h2>
-                <h4 style="color: white">IN SUPPORT DIRECTORY</h4>
+            <div style="width: 980px; height: 200px; color: white">
+                <h2 style="color: white;">ANSIBLE PLAYBOOK</h2>
+                <h4 style="color: white">IN SUPPORT DIRECTORY - CAR SERVICE</h4>
             </div>
-            <div style="width: 980px; height: 600px;">
-                <img width="100%" height="100%" src="images/introduction/image05.png">
+            <div style="width: 980px; height: 600px;" align="left">
+                <code style="color: darkred;">
+                    $ cd support/playbooks/deploy-ocp-services
+                    <br><br>
+                    # Run Car service (.Net) playbook
+                    <br>
+                    #
+                    <br>
+                    $ ./ansible-playbook-dotnetservice.sh
+                </code>
+            </div>
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="100%" data-background-position="center">
+            <div style="width: 980px; height: 200px; color: white">
+                <h2 style="color: white;">ANSIBLE PLAYBOOK</h2>
+                <h4 style="color: white">IN SUPPORT DIRECTORY - FLIGHT SERVICE</h4>
+            </div>
+            <div style="width: 980px; height: 600px;" align="left">
+                <code style="color: darkred">
+                    $ cd support/playbooks/deploy-ocp-services
+                    <br><br>
+                    # Run Flight service (JEE) playbook
+                    <br>
+                    #
+                    <br>
+                    $ ./ansible-playbook-javaservice.sh
+                </code>
+            </div>
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="100%" data-background-position="center">
+            <div style="width: 980px; height: 200px; color: white">
+                <h2 style="color: white;">ANSIBLE PLAYBOOK</h2>
+                <h4 style="color: white">IN SUPPORT DIRECTORY - HOTEL SERVICE</h4>
+            </div>
+            <div style="width: 980px; height: 600px;" align="left">
+                <code style="color: darkred">
+                    $ cd support/playbooks/deploy-ocp-services
+                    <br><br>
+                    # Run Hotel service (PHP) playbook
+                    <br>
+                    #
+                    <br>
+                    $ ./ansible-playbook-phpservice.sh
+                </code>
+            </div>
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="100%" data-background-position="center">
+            <div style="width: 980px; height: 200px; color: white">
+                <h2 style="color: white;">ANSIBLE PLAYBOOK</h2>
+                <h4 style="color: white">IN SUPPORT DIRECTORY - INTEGRATION SERVICE</h4>
+            </div>
+            <div style="width: 980px; height: 600px;" align="left">
+                <code style="color: darkred">
+                    $ cd support/playbooks/deploy-ocp-services
+                    <br><br>
+                    # Run Integration service (xPaaS Integration Server) playbook
+                    <br>
+                    #
+                    <br>
+                    $ ./ansible-playbook-fuseservice.sh
+                </code>
             </div>
         </section>
 
