Updates to lab04.

--- a/lab04.html
+++ b/lab04.html
@@ -80,13 +80,15 @@
                     <li>They are found here:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px"><code>$ cd support/playbooks/deploy-ocp-services</code></p></li>
+                        <li><p style="font-size: 24px; color: darkred"><code>$ cd support/playbooks/deploy-ocp-services</code></p></li>
                     </ul>
                     <br>
                     <li>Start with the discount rules service:</li>
+                    <br>
+                    <ul>
+                        <li><p style="font-size: 24px; color: darkred"><code>$ ./ansible-playbook-ruleservice.sh</code></p></li>
+                    </ul>
                 </ul>
-                <br><br>
-                <img src="images/destinasia-workshop/image36.png" align="right">
             </div>
         </section>
 
@@ -100,7 +102,7 @@
                         OpenShift Container Platform:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px"><code>$ ./ansible-playbook-ruleservice.sh</code></p></li>
+                        <li><p style="font-size: 24px; color: darkred"><code>$ ./ansible-playbook-ruleservice.sh</code></p></li>
                     </ul>
                 </ul>
             </div>
