--- a/lab05.html
+++ b/lab05.html
@@ -79,13 +79,15 @@
                     <li>They are found here:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px"><code>$ cd support/playbooks/deploy-ocp-services</code></p></li>
+                        <li><p style="font-size: 24px; color: darkred"><code>$ cd support/playbooks/deploy-ocp-services</code></p></li>
                     </ul>
                     <br>
                     <li>Let's deploy the flight service:</li>
+                    <br>
+                    <ul>
+                        <li><p style="font-size: 24px; color: darkred"><code>$ ./ansible-playbook-javaservice.sh</code></p></li>
+                    </ul>
                 </ul>
-                <br><br>
-                <img src="images/destinasia-workshop/image49.png" align="right">
             </div>
         </section>
 
@@ -99,7 +101,7 @@
                         OpenShift Container Platform:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px"><code>$ ./ansible-playbook-javaservice.sh</code></p></li>
+                        <li><p style="font-size: 24px; color: darkred"><code>$ ./ansible-playbook-javaservice.sh</code></p></li>
                     </ul>
                 </ul>
             </div>
