--- a/lab06.html
+++ b/lab06.html
@@ -79,13 +79,15 @@
                     <li>They are found here:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px"><code>$ cd support/playbooks/deploy-ocp-services</code></p></li>
+                        <li><p style="font-size: 24px; color: darkred;"><code>$ cd support/playbooks/deploy-ocp-services</code></p></li>
                     </ul>
                     <br>
                     <li>Let's deploy the car service:</li>
+                    <br>
+                    <ul>
+                        <li><p style="font-size: 24px; color: darkred;"><code>$ ./ansible-playbook-dotnetservice.sh</code></p></li>
+                    </ul>
                 </ul>
-                <br><br>
-                <img src="images/destinasia-workshop/image57.png" align="right">
             </div>
         </section>
 
@@ -99,7 +101,7 @@
                         OpenShift Container Platform:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px"><code>$ ./ansible-playbook-dotnetservice.sh</code></p></li>
+                        <li><p style="font-size: 24px; color: darkred"><code>$ ./ansible-playbook-dotnetservice.sh</code></p></li>
                     </ul>
                 </ul>
             </div>
@@ -144,14 +146,14 @@
                 For some reason the .Net stream was not added, do this by hand:
                 <br><br>
                 <ul>
-                    <li><p style="font-size: 24px"><code>$ oc login -u system:admin</code></p></li>
-                    <li><p style="font-size: 24px"><code>$ oc create -n openshift -f 'https://raw.githubusercontent.com/redhat-developer/s2i-dotnetcore/master/dotnet_imagestreams.json'</code></p></li>
+                    <li><p style="font-size: 24px; color: darkred"><code>$ oc login -u system:admin</code></p></li>
+                    <li><p style="font-size: 24px; color: darkred"><code>$ oc create -n openshift -f 'https://raw.githubusercontent.com/redhat-developer/s2i-dotnetcore/master/dotnet_imagestreams.json'</code></p></li>
                 </ul>
                 <br><br>
                 Then run car service playbook again (or if build in OCP console failed, rebuild it):
                 <br><br>
                 <ul>
-                    <li><p style="font-size: 24px"><code>$ ./ansible-playbook-dotnetservice.sh</code></p></li>
+                    <li><p style="font-size: 24px; color: darkred"><code>$ ./ansible-playbook-dotnetservice.sh</code></p></li>
                 </ul>
             </div>
         </section>
