Updates to lab09.

--- a/lab09.html
+++ b/lab09.html
@@ -99,7 +99,7 @@
                     <br>
                     <ul>
                         <li><p style="font-size: 24px">
-                            <code><a href="http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book" style="color: red" target="_blank">
+                            <code><a href="http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book" style="color: darkred" target="_blank">
                             http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</a></code></p></li>
                     </ul>
                     <br>
@@ -117,10 +117,10 @@
                     <li>The payload to be put into your REST client:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px"><code>Method: POST</code></p></li>
-                        <li><p style="font-size: 24px"><code>Header: Content-Type application/json</code></p></li>
-                        <li><p style="font-size: 24px"><code>URL: http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</code></p></li>
-                        <li><p style="font-size: 24px"><code>Body:
+                        <li><p style="font-size: 24px"><code style="color: darkred">Method: POST</code></p></li>
+                        <li><p style="font-size: 24px"><code style="color: darkred">Header: Content-Type application/json</code></p></li>
+                        <li><p style="font-size: 24px"><code style="color: darkred">URL: http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</code></p></li>
+                        <li><p style="font-size: 24px"><code style="color: darkred">Body:
                             {"flightReq":{"flightFrom":"SIN","flightTo":"PEK","flightDate":"03/08/2017","flightPassengers":2,"flightNo":"SIN22"},"hotelReq":{"hotelArrivalDate":"03/08/2017","hotelNights":33,"hotelCity":"PEK","hotelId":"Marriott"},"carReq":{"carCity":"PEK","carRentalCo":"Hertz","carType":"Econ","carStartDate":"03/08/2017","carDays":33}}</code></p></li>
                     </ul>
                 </ul>
@@ -135,8 +135,8 @@
                 Install or use your own REST Client, starting by selecting the <i>Method</i> and <i>URL</i>:
                 <br><br>
                 <ul>
-                    <li><p style="font-size: 24px"><code>Method: POST</code></p></li>
-                    <li><p style="font-size: 24px"><code>URL: http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</code></p></li>
+                    <li><p style="font-size: 24px"><code style="color: darkred">Method: POST</code></p></li>
+                    <li><p style="font-size: 24px"><code style="color: darkred">URL: http://fusetravelagency-appdev-in-cloud.192.168.99.100.xip.io/rest/book</code></p></li>
                 </ul>
                 <img src="images/destinasia-workshop/image78.png">
             </div>
@@ -150,7 +150,7 @@
                 Insert this <i>Header</i>:
                 <br><br>
                 <ul>
-                    <li><p style="font-size: 24px"><code>Header: Content-Type application/json</code></p></li>
+                    <li><p style="font-size: 24px"><code style="color: darkred">Header: Content-Type application/json</code></p></li>
                 </ul>
                 <br>
                 <img height="30%" width="30%" src="images/destinasia-workshop/image79.png">
@@ -166,7 +166,7 @@
                 Insert this <i>Body</i>, ensure there are no line feed (returns):
                 <br><br>
                 <ul>
-                    <li><p style="font-size: 24px"><code>Body:{"flightReq":{"flightFrom":"SIN","flightTo":"PEK","flightDate":"03/08/2017","flightPassengers":2,"flightNo":"SIN22"},"hotelReq":{"hotelArrivalDate":"03/08/2017","hotelNights":33,"hotelCity":"PEK","hotelId":"Marriott"},"carReq":{"carCity":"PEK","carRentalCo":"Hertz","carType":"Econ","carStartDate":"03/08/2017","carDays":33}}</code></p></li>
+                    <li><p style="font-size: 24px"><code style="color: darkred">Body:{"flightReq":{"flightFrom":"SIN","flightTo":"PEK","flightDate":"03/08/2017","flightPassengers":2,"flightNo":"SIN22"},"hotelReq":{"hotelArrivalDate":"03/08/2017","hotelNights":33,"hotelCity":"PEK","hotelId":"Marriott"},"carReq":{"carCity":"PEK","carRentalCo":"Hertz","carType":"Econ","carStartDate":"03/08/2017","carDays":33}}</code></p></li>
                 </ul>
                 <br>
                 <img src="images/destinasia-workshop/image81.png">
