Added video install preview.

--- a/introduction.html
+++ b/introduction.html
@@ -135,6 +135,16 @@
         </section>
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
+            <div style="width: 1056px; height: 130px;">
+                <h2 style="color: white">PREVIEW OCP INSTALL</h2>
+                <h4 style="color: white">OpenShift Container Platform installation video</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <a href="https://youtu.be/Rj0We91ec9Y" style="color: darkred" target="_blank"><img src="images/ocp-install-video.png"></a>
+            </div>
+        </section>
+
+        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
             <div style="width: 100%; height: 180px; color: white">
                 <h2 style="color: white;">INSTALLATION</h2>
                 <h4 style="color: white">OPENSHIFT CONTAINER PLATFORM IN MINUTES</h4>
