--- a/lab01.html
+++ b/lab01.html
@@ -61,17 +61,27 @@
         </section>
 
         <section>
-            <h2>Lab 1</h2>
+            <h2>LAB 1</h2>
             <h3>Install OpenShift Container Platform</h3>
         </section>
 
         <section>
             <div style="width: 1056px; height: 130px;">
-                <h2>Lab Goal</h2>
+                <h2>LAB GOAL</h2>
                 <h4>To install and login to OpenShift Container Platform</h4>
             </div>
             <div style="width: 1056px; height: 600px;">
                 <img src="images/destinasia-workshop/image01.png">
+            </div>
+        </section>
+
+        <section>
+            <div style="width: 1056px; height: 130px;">
+                <h2>PREVIEW OCP INSTALL</h2>
+                <h4>OpenShift Container Platform installation video</h4>
+            </div>
+            <div style="width: 1056px; height: 600px;">
+                <a href="https://youtu.be/Rj0We91ec9Y" style="color: darkred" target="_blank"><img src="images/ocp-install-video.png"></a>
             </div>
         </section>
 
