--- a/lab09.html
+++ b/lab09.html
@@ -213,7 +213,7 @@
 
         <section>
             <div style="width: 1056px; height: 120px; color: white">
-                <h3>DESTINASIA SERIVCES HERO</h3>
+                <h3>DESTINASIA SERVICES HERO</h3>
             </div>
             <div style="width: 1056px; height: 400px;" align="left">
                 <h5>
